<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/login_pin_hint"
        app:layout_constraintEnd_toEndOf="@+id/tlPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/tlPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/tlPhoneNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:maxLength="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/register_create_account"
        android:background="@drawable/green_rounded_corner_button"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:padding="@dimen/button_padding"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlPhoneNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/phone_number"
        app:layout_constraintEnd_toEndOf="@+id/btnCreateAccount"
        app:layout_constraintStart_toStartOf="@+id/btnCreateAccount"
        app:layout_constraintTop_toBottomOf="@+id/tlIdNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:maxLength="13"
            android:singleLine="true"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlIdNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/national_id_passport"
        app:layout_constraintEnd_toEndOf="@+id/tlPhoneNumber"
        app:layout_constraintStart_toStartOf="@+id/tlPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/tlFullName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etIdNumber"
            android:layout_width="match_parent"
            android:maxLength="10"
            android:singleLine="true"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlFullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/full_name"
        app:layout_constraintEnd_toEndOf="@+id/tlIdNumber"
        app:layout_constraintStart_toStartOf="@+id/tlIdNumber"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etFullName"
            android:layout_width="match_parent"
            android:maxLength="20"
            android:singleLine="true"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saving_challege" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorAccent"
        android:alpha="0.2"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>