<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tlInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/verification_message_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tlOTP"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/verification_code"
        app:layout_constraintEnd_toEndOf="@+id/tlInfo"
        app:layout_constraintStart_toStartOf="@+id/tlInfo"
        app:layout_constraintTop_toBottomOf="@+id/tlInfo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="@dimen/extra_large_text"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnVerifyAccount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/green_rounded_corner_button"
        android:padding="@dimen/button_padding"
        android:text="@string/verify_account"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tlOTP"
        app:layout_constraintStart_toStartOf="@+id/tlOTP"
        app:layout_constraintTop_toBottomOf="@+id/tlOTP" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:tint="@color/colorAccent"
        app:layout_constraintStart_toStartOf="@+id/btnVerifyAccount"
        app:layout_constraintTop_toBottomOf="@+id/btnVerifyAccount"
        app:srcCompat="@drawable/refresh" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:text="Resend Verification Code"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@+id/imageView5"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5" />
</androidx.constraintlayout.widget.ConstraintLayout>